<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>de.dhbw.rahmlab</groupId>
		<artifactId>DSL4GA__Parent</artifactId>
		<version>1.0-SNAPSHOT</version>
	</parent>
	<groupId>de.dhbw.rahmlab</groupId>
	<!-- TODO können wir das in ga umbenennen um wie sl.jar ein ga.jar zu bekommen
         enthält das überhaupt den ganzen code der von einem ga.jar erwartet wird	-->
	<artifactId>DSL4GA_Impl_Truffle</artifactId>
	<version>1.0-SNAPSHOT</version>
	<packaging>jar</packaging>
	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
		<skipTests>true</skipTests>
		<truffleGenSourceDir>${project.build.directory}/generated-sources/truffle-dsl-processor</truffleGenSourceDir>
	</properties>
	<dependencies>
		<!--
		<dependency>
			<groupId>de.orat.view3d</groupId>
			<artifactId>Euclid3DViewAPI</artifactId>
			<version>1.0-SNAPSHOT</version>
		</dependency>
		-->
		<dependency>
			<groupId>de.orat.math.view</groupId>
			<artifactId>EuclidView3d</artifactId>
			<version>1.0-SNAPSHOT</version>
			<scope>runtime</scope>
		</dependency>
		<dependency>
			<groupId>de.dhbw.rahmlab</groupId>
			<artifactId>DSL4GA_API</artifactId>
			<version>1.0-SNAPSHOT</version>
		</dependency>
		<dependency>
			<groupId>de.dhbw.rahmlab</groupId>
			<artifactId>DSL4GA_Common</artifactId>
			<version>1.0-SNAPSHOT</version>
		</dependency>

		<!-- Currently incompatible with EuclidView3d. -->
		<!--
		<dependency>
			<groupId>de.orat.math.gacalc</groupId>
			<artifactId>GACalcAPI</artifactId>
			<version>1.0-SNAPSHOT</version>
		</dependency>
		<dependency>
			<groupId>de.orat.math.cgacasadi</groupId>
			<artifactId>CGACasADi</artifactId>
			<version>1.0-SNAPSHOT</version>
			<scope>runtime</scope>
		</dependency>
		-->
		
		<dependency>
			<groupId>de.orat.math.cga</groupId>
			<artifactId>ConformalGeometricAlgebra</artifactId>
			<version>1.0-SNAPSHOT</version>
		</dependency>
		<!-- indirect dependency introduced via ConformalGeometricAlgebra -->
		<dependency>
			<groupId>de.orat.math.ga</groupId>
			<artifactId>GeometricAlgebra</artifactId>
			<version>1.0-SNAPSHOT</version>
		</dependency>
		
		<dependency>
			<groupId>org.graalvm.polyglot</groupId>
			<artifactId>polyglot</artifactId>
			<version>${graalvm.version}</version>
		</dependency>
		<dependency>
			<groupId>org.graalvm.truffle</groupId>
			<artifactId>truffle-api</artifactId>
			<version>${graalvm.version}</version>
		</dependency>
		<dependency>
			<groupId>org.graalvm.truffle</groupId>
			<artifactId>truffle-runtime</artifactId>
			<version>${graalvm.version}</version>
			<scope>runtime</scope>
		</dependency>

	</dependencies>
	<build>
		<pluginManagement>
			<plugins>
				<plugin>
					<artifactId>maven-compiler-plugin</artifactId>
					<version>3.11.0</version>
					<configuration>
						<source>21</source>
						<target>21</target>
						<annotationProcessorPaths>
							<path>
								<groupId>org.graalvm.truffle</groupId>
								<artifactId>truffle-dsl-processor</artifactId>
								<version>${graalvm.version}</version>
							</path>
						</annotationProcessorPaths>
						<generatedSourcesDirectory>${truffleGenSourceDir}</generatedSourcesDirectory>
						<compilerArgs>
							<arg>--add-exports</arg>
							<arg>org.graalvm.truffle/com.oracle.truffle.api.nodes=ALL-UNNAMED</arg>
							<arg>--add-exports</arg>
							<arg>org.graalvm.truffle/com.oracle.truffle.api.exception=ALL-UNNAMED</arg>
							<arg>--add-exports</arg>
							<arg>org.graalvm.truffle/com.oracle.truffle.api=ALL-UNNAMED</arg>
							<arg>--add-exports</arg>
							<arg>org.graalvm.truffle/com.oracle.truffle.api.interop=ALL-UNNAMED</arg>
						</compilerArgs>
					</configuration>
					<dependencies>
						<dependency>
							<groupId>org.graalvm.truffle</groupId>
							<artifactId>truffle-dsl-processor</artifactId>
							<version>${graalvm.version}</version>
						</dependency>
					</dependencies>
				</plugin>
			</plugins>
		</pluginManagement>
		<!--finalName>DSL4GA_Impl_Truffle</finalName-->
		<!--
<plugins>
	<plugin>
		<artifactId>maven-assembly-plugin</artifactId>
		<executions>
			<execution>
				<phase>package</phase>
				<goals>
					<goal>single</goal>
				</goals>
			</execution>
		</executions>
		<configuration>
			<archive>
				<manifest>
					<mainClass>de.dhbw.rahmlab.dsl4ga.impl.truffle.App</mainClass>
				</manifest>
			</archive>
			<descriptorRefs>
				<descriptorRef>jar-with-dependencies</descriptorRef>
			</descriptorRefs>
		</configuration>
	</plugin>
</plugins>
		-->
	 <plugins>
	  <plugin>
	   <groupId>org.apache.maven.plugins</groupId>
	   <artifactId>maven-compiler-plugin</artifactId>
	   <version>3.13.0</version>
	   <configuration>
	    <source>21</source>
	    <target>21</target>
	   </configuration>
	  </plugin>
	 </plugins>
	</build>
</project>
